--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <a href="team.html" class="btn">Meet Our Team</a>
       </div>
       <img
-        src="assets/images/pexels-karolina-grabowska-6627526.jpg"
+        src="https://i.postimg.cc/SN4qjcXD/pexels-karolina-grabowska-6627526.jpg"
         alt="Dental care concept"
         class="hero-image"
         data-aos="fade-left"
@@ -79,7 +79,7 @@
     </section>
 
     <footer>
-      <p>© 2025 OralCare | All rights reserved</p>
+      <p>© 2025 OralSpring | All rights reserved</p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
