--- a/product.html
+++ b/product.html
@@ -13,14 +13,26 @@
   </head>
   <body>
     <div class="floating-icons">
-      <img src="assets/icons/tooth.png" class="icon icon1" alt="tooth" />
       <img
-        src="assets/icons/toothbrush.png"
+        src="https://i.postimg.cc/SNRd6vzN/tooth.png"
+        class="icon icon1"
+        alt="tooth"
+      />
+      <img
+        src="https://i.postimg.cc/rF71SFk1/toothbrush.png"
         class="icon icon2"
         alt="toothbrush"
       />
-      <img src="assets/icons/sparkle.png" class="icon icon3" alt="sparkle" />
-      <img src="assets/icons/heart.png" class="icon icon4" alt="heart" />
+      <img
+        src="https://i.postimg.cc/YSRLytJz/sparkle.png"
+        class="icon icon3"
+        alt="sparkle"
+      />
+      <img
+        src="https://i.postimg.cc/85scKMdB/heart.png"
+        class="icon icon4"
+        alt="heart"
+      />
     </div>
 
     <header>
@@ -40,7 +52,7 @@
       <div class="product-container">
         <div class="phone-frame" data-aos="fade-right">
           <img
-            src="assets/images/pexels-karolina-grabowska-4465125.jpg"
+            src="https://i.postimg.cc/6pTPQQhT/pexels-karolina-grabowska-4465125.jpg"
             alt="Oral health app visualization"
           />
         </div>
