--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- 🌿 Navbar -->
     <nav class="navbar">
       <div class="logo">Oral<span>Spring</span></div>
       <ul class="nav-links">
@@ -16,6 +15,7 @@
         <li><a href="team.html">Team</a></li>
         <li><a href="product.html">Product</a></li>
         <li><a href="blog.html" class="active">Blog</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
     <section class="coming-soon" data-aos="fade-up">
@@ -34,8 +34,6 @@
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
