--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="team.html">Our Team</a></li>
           <li><a href="product.html">Our App</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -37,13 +38,42 @@
         data-aos="fade-left"
       />
     </section>
+    <section class="scroll-tiles">
+      <h2 data-aos="fade-up">Discover the Essence of OralSpring</h2>
+      <div class="tiles-container">
+        <div class="tile" data-aos="fade-up">
+          <p>Oral disease affects half of world’s population.</p>
+        </div>
+
+        <div class="tile" data-aos="fade-up">
+          <p>1 billion cases were added in the last 30 years.</p>
+        </div>
+
+        <div class="tile" data-aos="fade-up">
+          <p>Causes pain and discomfort.</p>
+        </div>
+
+        <div class="tile" data-aos="fade-up">
+          <p>
+            Reduces self-confidence causes embarrassment and social isolation.
+          </p>
+        </div>
+
+        <div class="tile" data-aos="fade-up">
+          <p>Adds US$ 500 billion annually to economic burden.</p>
+        </div>
+      </div>
+    </section>
 
     <section class="about" data-aos="fade-up">
       <h2>About Us</h2>
       <p>
-        At OralCare, we combine technology and dentistry to create innovative
-        oral health management tools. Our mission is to promote healthy smiles
-        through accessible, AI-powered solutions for everyone.
+        At Oral Spring, we advance oral health care and hygiene. We develop
+        intelligent tools to monitor, detect and prevent oral diseases. Our
+        long-term vision is to create a connected oral health ecosystem that
+        combines early detection, personalized insights, and preventive care -
+        enhancing existing oral health care systems and improving overall
+        outcomes.
       </p>
     </section>
     <section class="facts-section" data-aos="fade-up">
