--- a/product.html
+++ b/product.html
@@ -43,24 +43,30 @@
           <li><a href="team.html">Our Team</a></li>
           <li><a href="product.html" class="active">Our App</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
     <section class="product" data-aos="fade-up">
       <h2>Our Smart Oral Care App</h2>
+
       <div class="product-container">
         <div class="phone-frame" data-aos="fade-right">
           <img
-            src="https://i.postimg.cc/6pTPQQhT/pexels-karolina-grabowska-4465125.jpg"
+            src="https://i.postimg.cc/rmxgGStT/Screenshot-2025-10-24-133452.png"
+            alt="Oral health app visualization"
+          />
+          <img
+            src="https://i.postimg.cc/mkhkfSN2/Screenshot-2025-10-24-133512.png"
             alt="Oral health app visualization"
           />
         </div>
         <div class="product-info" data-aos="fade-left">
           <h3>Features:</h3>
           <ul>
+            <li>Snowdrop – AI powered smartphone app to monitor oral health</li>
             <li>AI-powered oral health scan</li>
-            <li>Appointment booking with dentists</li>
             <li>Personalized dental care tips</li>
           </ul>
           <a href="#" class="btn">Download App</a>
