--- a/team.html
+++ b/team.html
@@ -20,6 +20,7 @@
           <li><a href="team.html" class="active">Our Team</a></li>
           <li><a href="product.html">Our App</a></li>
           <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -87,43 +88,6 @@
         </div>
       </div>
     </div>
-
-    <section class="contact-section" id="contact">
-      <h2>Contact Us</h2>
-      <p>
-        Have a dental concern or need a consultation? Reach out to us below!
-      </p>
-
-      <form
-        action="https://formspree.io/f/mdkwqovk"
-        method="POST"
-        class="contact-form"
-      >
-        <div class="form-group">
-          <input
-            type="text"
-            name="name"
-            placeholder="Your Full Name"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <input type="email" name="email" placeholder="Your Email" required />
-        </div>
-        <div class="form-group">
-          <input type="tel" name="phone" placeholder="Phone Number" required />
-        </div>
-        <div class="form-group">
-          <textarea
-            name="message"
-            rows="4"
-            placeholder="Describe your concern or appointment request"
-          ></textarea>
-        </div>
-
-        <button type="submit" class="btn">Send Request</button>
-      </form>
-    </section>
 
     <footer>
       <p>© 2025 OralSpring | All rights reserved</p>
