--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OralSpring | Blog</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="floating-icons">
+      <img
+        src="https://i.postimg.cc/SNRd6vzN/tooth.png"
+        class="icon icon1"
+        alt="tooth"
+      />
+      <img
+        src="https://i.postimg.cc/rF71SFk1/toothbrush.png"
+        class="icon icon2"
+        alt="toothbrush"
+      />
+      <img
+        src="https://i.postimg.cc/YSRLytJz/sparkle.png"
+        class="icon icon3"
+        alt="sparkle"
+      />
+      <img
+        src="https://i.postimg.cc/85scKMdB/heart.png"
+        class="icon icon4"
+        alt="heart"
+      />
+    </div>
     <nav class="navbar">
-      <div class="logo">Oral<span>Spring</span></div>
+      <div class="logo-container">
+        <img
+          src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+          alt="Oral Spring Logo"
+          class="logo-img"
+        />
+        <div class="logo">Oral<span>Spring</span></div>
+      </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="team.html">Team</a></li>
