--- a/index.html
+++ b/index.html
@@ -12,9 +12,38 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
   </head>
   <body>
+    <div class="floating-icons">
+      <img
+        src="https://i.postimg.cc/SNRd6vzN/tooth.png"
+        class="icon icon1"
+        alt="tooth"
+      />
+      <img
+        src="https://i.postimg.cc/rF71SFk1/toothbrush.png"
+        class="icon icon2"
+        alt="toothbrush"
+      />
+      <img
+        src="https://i.postimg.cc/YSRLytJz/sparkle.png"
+        class="icon icon3"
+        alt="sparkle"
+      />
+      <img
+        src="https://i.postimg.cc/85scKMdB/heart.png"
+        class="icon icon4"
+        alt="heart"
+      />
+    </div>
     <header>
       <nav class="navbar">
-        <div class="logo">Oral<span>Spring</span></div>
+        <div class="logo-container">
+          <img
+            src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+            alt="Oral Spring Logo"
+            class="logo-img"
+          />
+          <div class="logo">Oral<span>Spring</span></div>
+        </div>
         <ul class="nav-links">
           <li><a href="index.html" class="active">Home</a></li>
           <li><a href="team.html">Our Team</a></li>
@@ -31,12 +60,6 @@
         <p>Empowering oral health through smart, modern solutions.</p>
         <a href="team.html" class="btn">Meet Our Team</a>
       </div>
-      <img
-        src="https://i.postimg.cc/SN4qjcXD/pexels-karolina-grabowska-6627526.jpg"
-        alt="Dental care concept"
-        class="hero-image"
-        data-aos="fade-left"
-      />
     </section>
     <section class="scroll-tiles">
       <h2 data-aos="fade-up">Discover the Essence of OralSpring</h2>
