--- a/product.html
+++ b/product.html
@@ -37,7 +37,14 @@
 
     <header>
       <nav class="navbar">
-        <div class="logo">Oral<span>Spring</span></div>
+        <div class="logo-container">
+          <img
+            src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+            alt="Oral Spring Logo"
+            class="logo-img"
+          />
+          <div class="logo">Oral<span>Spring</span></div>
+        </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="team.html">Our Team</a></li>
