--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link
+      rel="apple-touch-icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div class="floating-icons">
@@ -37,33 +46,37 @@
     <nav class="navbar">
       <div class="logo-container">
         <img
-          src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+          src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
           alt="Oral Spring Logo"
           class="logo-img"
         />
-        <div class="logo">Oral<span>Spring</span></div>
+        <div class="logo">Oral<span> Spring</span></div>
       </div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="team.html">Team</a></li>
-        <li><a href="product.html">Product</a></li>
+        <li><a href="product.html">Technology</a></li>
         <li><a href="blog.html" class="active">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <section class="coming-soon" data-aos="fade-up">
-      <div class="content">
-        <h1>Blogs will be Available Soon</h1>
-        <p>
-          We’re crafting exciting articles on oral health, wellness, and the
-          science behind beautiful smiles.
-        </p>
-        <a href="index.html" class="btn">Back to Home</a>
-      </div>
+    <section class="survey-section" data-aos="fade-up">
+      <h2>We’d love your feedback</h2>
+      <p>
+        Please take a quick 2-minute survey to tell us about your oral health
+        routine.
+      </p>
+      <a
+        href="https://docs.google.com/forms/d/e/1FAIpQLSdGl3-V2ez3adBhj4wtZEQEGkuBQDP80b6FgOEyFIOXnMlfrg/viewform"
+        target="_blank"
+        class="btn"
+      >
+        Take the Survey
+      </a>
     </section>
 
     <footer>
-      <p>&copy; 2025 OralSpring. All rights reserved.</p>
+      <p>&copy; 2025 OralSpring | All rights reserved.</p>
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
