--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="apple-touch-icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div class="floating-icons">
@@ -37,16 +46,16 @@
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+            src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
             alt="Oral Spring Logo"
             class="logo-img"
           />
-          <div class="logo">Oral<span>Spring</span></div>
+          <div class="logo">Oral<span> Spring</span></div>
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="team.html">Our Team</a></li>
-          <li><a href="product.html">Our App</a></li>
+          <li><a href="team.html">Team</a></li>
+          <li><a href="product.html">Technology</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
@@ -57,10 +66,7 @@
       <div class="contact-container">
         <div class="contact-info">
           <h2>Get in Touch</h2>
-          <p>
-            Have questions, feedback, or need dental advice? We’d love to hear
-            from you!
-          </p>
+          <p>Questions and feedback - we'd love to hear from you!</p>
           <ul>
             <li><strong>Email:</strong> contact@oral-spring.com</li>
           </ul>
@@ -86,7 +92,7 @@
             placeholder="Your Message"
             required
           ></textarea>
-          <button type="submit">Send Message</button>
+          <button class="btn" type="submit">Send Message</button>
         </form>
 
         <script>
