--- a/product.html
+++ b/product.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <link
+      rel="apple-touch-icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div class="floating-icons">
@@ -39,16 +48,16 @@
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+            src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
             alt="Oral Spring Logo"
             class="logo-img"
           />
-          <div class="logo">Oral<span>Spring</span></div>
+          <div class="logo">Oral<span> Spring</span></div>
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="team.html">Our Team</a></li>
-          <li><a href="product.html" class="active">Our App</a></li>
+          <li><a href="team.html">Team</a></li>
+          <li><a href="product.html" class="active">Technology</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -56,7 +65,7 @@
     </header>
 
     <section class="product" data-aos="fade-up">
-      <h2>Our Smart Oral Care App</h2>
+      <h2>AI powered smart Oral Care Smartphone Application</h2>
 
       <div class="product-container">
         <div class="phone-frame" data-aos="fade-right">
@@ -70,11 +79,8 @@
           />
         </div>
         <div class="product-info" data-aos="fade-left">
-          <h3>Features:</h3>
           <ul>
             <li>Snowdrop – AI powered smartphone app to monitor oral health</li>
-            <li>AI-powered oral health scan</li>
-            <li>Personalized dental care tips</li>
           </ul>
           <a href="#" class="btn">Download App</a>
         </div>
