--- a/team.html
+++ b/team.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <link
+      rel="apple-touch-icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+      type="image/png"
+    />
   </head>
   <body>
     <div class="floating-icons">
@@ -38,16 +47,16 @@
       <nav class="navbar">
         <div class="logo-container">
           <img
-            src="https://i.postimg.cc/0yKSYfhY/Chat-GPT-Image-Oct-25-2025-12-22-03-AM.png"
+            src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
             alt="Oral Spring Logo"
             class="logo-img"
           />
-          <div class="logo">Oral<span>Spring</span></div>
+          <div class="logo">Oral<span> Spring</span></div>
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="team.html" class="active">Our Team</a></li>
-          <li><a href="product.html">Our App</a></li>
+          <li><a href="team.html" class="active">Team</a></li>
+          <li><a href="product.html">Technology</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
