--- a/blog.html
+++ b/blog.html
@@ -45,11 +45,13 @@
     </div>
     <nav class="navbar">
       <div class="logo-container">
-        <img
-          src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
-          alt="Oral Spring Logo"
-          class="logo-img"
-        />
+        <a href="index.html">
+          <img
+            src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+            alt="Oral Spring Logo"
+            class="logo-img"
+          />
+        </a>
         <div class="logo">Oral<span> Spring</span></div>
       </div>
       <ul class="nav-links">
