--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oral Health Care | Our App</title>
+    <title>OralSpring | Technology</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
@@ -47,11 +47,13 @@
     <header>
       <nav class="navbar">
         <div class="logo-container">
-          <img
-            src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
-            alt="Oral Spring Logo"
-            class="logo-img"
-          />
+          <a href="index.html">
+            <img
+              src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+              alt="Oral Spring Logo"
+              class="logo-img"
+            />
+          </a>
           <div class="logo">Oral<span> Spring</span></div>
         </div>
         <ul class="nav-links">
