--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oral Health Care | Our Team</title>
+    <title>OralSpring | Team</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
@@ -46,11 +46,13 @@
     <header>
       <nav class="navbar">
         <div class="logo-container">
-          <img
-            src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
-            alt="Oral Spring Logo"
-            class="logo-img"
-          />
+          <a href="index.html">
+            <img
+              src="https://i.postimg.cc/pXc60HVV/Chat-GPT-Image-Oct-25-2025-12-22-03-AM-removebg-preview.png"
+              alt="Oral Spring Logo"
+              class="logo-img"
+            />
+          </a>
           <div class="logo">Oral<span> Spring</span></div>
         </div>
         <ul class="nav-links">
@@ -69,45 +71,55 @@
       <!-- member 1 -->
       <div class="team-container">
         <div class="team-card" data-aos="zoom-in" data-name="rajesh">
-          <img
-            src="https://images.crunchbase.com/image/upload/c_thumb,h_170,w_170,f_auto,g_face,z_0.7,b_white,q_auto:eco,dpr_2/z5a3glh0fpntfwrdxea5?ik-sanitizeSvg=true"
-            alt="Rajesh Jaiswal"
-          />
+          <div class="overlay">
+            <img
+              src="https://images.crunchbase.com/image/upload/c_thumb,h_170,w_170,f_auto,g_face,z_0.7,b_white,q_auto:eco,dpr_2/z5a3glh0fpntfwrdxea5?ik-sanitizeSvg=true"
+              alt="Rajesh Jaiswal"
+            />
+          </div>
           <h3>Rajesh Jaiswal</h3>
         </div>
 
         <!-- member 2 -->
         <div class="team-card" data-aos="zoom-in" data-name="abhilash">
-          <img
-            src="https://oamrs.org/images/Headshots/Abhilash-Rakkunedeth-Hareendranathan%20headshot.png"
-            alt="Abhilash Hareendranathan"
-          />
+          <div class="overlay">
+            <img
+              src="https://oamrs.org/images/Headshots/Abhilash-Rakkunedeth-Hareendranathan%20headshot.png"
+              alt="Abhilash Hareendranathan"
+            />
+          </div>
           <h3>Abhilash Hareendranathan</h3>
         </div>
 
         <!-- member 3 -->
         <div class="team-card" data-aos="zoom-in" data-name="pallavi">
-          <img
-            src="https://i.postimg.cc/Mpdj96k7/Screenshot-2025-10-23-234628.png"
-            alt="Pallavi Ratra"
-          />
+          <div class="overlay">
+            <img
+              src="https://i.postimg.cc/Mpdj96k7/Screenshot-2025-10-23-234628.png"
+              alt="Pallavi Ratra"
+            />
+          </div>
           <h3>Pallavi Ratra</h3>
         </div>
         <!-- member 4 -->
         <div class="team-card" data-aos="zoom-in" data-name="shammy">
-          <img
-            src="https://i.postimg.cc/QM7hHmqQ/Screenshot-2025-10-24-000252.png"
-            alt="Shammy Raj"
-          />
+          <div class="overlay">
+            <img
+              src="https://i.postimg.cc/QM7hHmqQ/Screenshot-2025-10-24-000252.png"
+              alt="Shammy Raj"
+            />
+          </div>
           <h3>Shammy Raj</h3>
         </div>
 
         <!-- member 5 -->
         <div class="team-card" data-aos="zoom-in" data-name="sushant">
-          <img
-            src="https://i.postimg.cc/sxqTQYmD/Screenshot-2025-10-24-000508.png"
-            alt="Sushant Ambastha"
-          />
+          <div class="overlay">
+            <img
+              src="https://i.postimg.cc/sxqTQYmD/Screenshot-2025-10-24-000508.png"
+              alt="Sushant Ambastha"
+            />
+          </div>
           <h3>Sushant Ambastha</h3>
         </div>
       </div>
