--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="team.html">Team</a></li>
+          <!-- <li><a href="team.html">Team</a></li> -->
           <li><a href="product.html">Technology</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html">Contact</a></li>
