--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <!-- <li><a href="team.html">Team</a></li> -->
+          <li><a href="team.html">Team</a></li>
           <li><a href="product.html">Technology</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
